--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </ol>
 
     <div class="info">Prep Time: 45 min | Serves: 4</div>
+    <div id="prep-timer" class="info">Prep Time Left: 45:00</div>
 
     <div class="progress-bar" id="progress"></div>
     <button onclick="startCooking()" disabled>Start Cooking</button>
