--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <button onclick="toggleSection('steps')">Show Steps</button>
     <ol id="steps" class="hidden">
-      <li>Preheat oven to 350°F.</li>
-      <li>Mix ingredients.</li>
+      <li>Preheat oven to 350°F. (5 minutes)</li>
+      <li>Mix ingredients. (10 minutes)</li>
       <li>Bake for 30 minutes.</li>
     </ol>
 
