--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
   <div class="recipe-card">
     <h1>🍫 Chocolate Cake</h1>
-    <img src="cake.png" alt="Chocolate Cake" class="dish-image" />
+    <div class="image-container">
+      <img src="cake.png" alt="Chocolate Cake" class="dish-image" />
+    </div>
     
     <button onclick="toggleSection('ingredients')">Show Ingredients</button>
+    <div class="print-only"><strong>Ingredients</strong></div>
     <ul id="ingredients" class="hidden">
       <li>2 cups flour</li>
       <li>1 cup sugar</li>
@@ -19,6 +22,7 @@
     </ul>
 
     <button onclick="toggleSection('steps')">Show Steps</button>
+    <div class="print-only"><strong>Steps</strong></div>
     <ol id="steps" class="hidden">
       <li>Preheat oven to 350°F. (5 minutes)</li>
       <li>Mix ingredients. (10 minutes)</li>
@@ -31,6 +35,7 @@
     <div class="progress-bar" id="progress"></div>
     <button onclick="startCooking()" disabled>Start Cooking</button>
     <button onclick="nextStep()" disabled>Next</button>
+    <button onclick="window.print()">🖨️ Print Recipe</button>
     <button onclick="resetCooking()">Reset</button>
   </div>
 
